--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type='text/javascript' src='//pl18748924.highrevenuegate.com/e8/62/15/e862159d25bab8dccd4c401438e5744b.js'></script>
   </body>
 </html>
