--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,19 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script type='text/javascript' src='//pl18748924.highrevenuegate.com/e8/62/15/e862159d25bab8dccd4c401438e5744b.js'></script>
+    <script type="text/javascript">
+      atOptions = {
+        'key' : 'c6474ba99bf7c125c0a326592a758ac1',
+        'format' : 'iframe',
+        'height' : 60,
+        'width' : 468,
+        'params' : {}
+      };
+      document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/c6474ba99bf7c125c0a326592a758ac1/invoke.js"></scr' + 'ipt>');
+    </script>
+    <script type='text/javascript' src='//pl18748924.highrevenuegate.com/e8/62/15/e862159d25bab8dccd4c401438e5744b.js'></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2577270453228321"
+     crossorigin="anonymous"></script>
+
   </body>
 </html>
