--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,6 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2577270453228321"
-     crossorigin="anonymous"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -32,18 +30,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2577270453228321"
-     crossorigin="anonymous"></script>
-<!-- dec Ads -->
-    <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-2577270453228321"
-        data-ad-slot="7053696576"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    
 
 
    <!-- https://publishers.adsterra.com/stats?_ga=2.240058883.1002166910.1678696892-661249495.1678696892&_gac=1.91150696.1678697268.Cj0KCQjwk7ugBhDIARIsAGuvgPYh85Xb7nvib8tHYwxtTApM9seEIZpRX7164gt_6u6VOMczOSiuggMaApkjEALw_wcB
@@ -61,6 +48,6 @@
     <script type='text/javascript' src='//pl18748924.highrevenuegate.com/e8/62/15/e862159d25bab8dccd4c401438e5744b.js'></script>
 
     -->
-    
+    <script type='text/javascript' src='//pl18748924.highrevenuegate.com/e8/62/15/e862159d25bab8dccd4c401438e5744b.js'></script>
   </body>
 </html>
