--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>World Dictionary</title>
+    <meta name="google-site-verification" content="wsNyPX8HDPkLCG16YE08xwDuaWdyLg-DrgAFwssgycw" />
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
