--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="keywords" content="information ,world ,world dictionary, countrie ,capital ,language ,nation,maps,flag,Population" />
+    <meta name="msvalidate.01" content="8091991F7D20142C731B97223329F786" />
     <meta
       name="description"
       content="Website using to get information aboute countrie ,capital and language of world"
