--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,8 @@
 
     -->
     <script type='text/javascript' src='//pl18748924.highrevenuegate.com/e8/62/15/e862159d25bab8dccd4c401438e5744b.js'></script>
+
+    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XM6E9ZCRGQ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -60,5 +62,6 @@
     
       gtag('config', 'G-XM6E9ZCRGQ');
     </script>
+    
   </body>
 </html>
